--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">HeatMyCar</string>
-    <string name="accessibility_description">Test 1 In order to control the PHEV Remote application, HeatMyCar needs to be set as an accessibility service.</string>
+    <string name="accessibility_description">In order to control the PHEV Remote application, HeatMyCar needs to be set as an accessibility service.</string>
+    <string name="admin_description">In order to lock the screen, HeatMyCar needs admin privileges.</string>
+    <string name="admin_label">HeatMyCar</string>
 </resources>
